# kaigb

./: .gitattributes  .gitignore  CMakeLists.txt  license.txt  readme.md
CMakeModules/: TargetConfigure.cmake
src/: CMakeLists.txt
src/gbcore/: CMakeLists.txt
src/gbcore/src/: CMakeLists.txt
src/gbcore/src/private/: log.c
src/gbcore/src/public/gbcore/: log.h
